# ZadKcppZaliczenie-

./: CMakeLists.txt  main.cc
include/: ZadKcpp.h  ZadOperatoryPrzypisania.h  ZadParzysta.h  ZadPrzykladKlasy.h  ZadStruktura.h  ZadZwracanie.h
src/: ZadKcpp.cc  ZadOperatoryPrzypisania.cc  ZadParzysta.cc  ZadPrzykladKlasy.cc  ZadStruktura.cc  ZadZwracanie.cc
